zkay/examples/type_errors/Indexing_Nested2.zkay
pragma zkay >=0.2.0;

contract Indexing_Nested {

    mapping(address => mapping(address!y => uint@y)) values;


	function f(address a, uint@me value) public {
		values[me][a] = value;
	}

}
